style: login screen

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,7 +33,7 @@
 
   --ion-color-warning: #f19425;
   --ion-color-warning-rgb: 241,148,37;
-  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast: #ffffff;
   --ion-color-warning-contrast-rgb: 0,0,0;
   --ion-color-warning-shade: #d48221;
   --ion-color-warning-tint: #f29f3b;
