--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,9 +1,26 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
+<ion-content fullscreen>
+  <div>
+    <img class="sw-img" src="/assets/icons/icon.png" alt="dalex-swift" />
+  </div>
+  <div class="login-header">
+    <h2>Login</h2>
+    <p>Please log in to access your account.</p>
+  </div>
+  <div class="container">
+    <ion-item class="ion-padding">
+      <ion-label position="stacked">Phone Number</ion-label>
+      <ion-input shape="rectangle" class="login-page-input" type="tel"></ion-input>
+      <ion-label position="stacked">PIN</ion-label>
+      <ion-input shape="rectangle" class="login-page-input" type="password"></ion-input>
+    </ion-item>
+    <div style="margin-left: 2rem; margin-right: 2rem;">
+      <ion-button color="warning" class="login-page-button" expand="block">Login</ion-button>
+      <ion-label style="float: right;">Forgot your PIN?</ion-label>
+    </div>
+    <div style="margin-top: 3rem; margin: 2rem;">
+      <ion-label>New Customer</ion-label>
+      <ion-button color="warning" class="login-page-button" expand="block">Create an Account</ion-button>
+    </div>
+  </div>
 
 </ion-content>
