style: login screen

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,18 +7,18 @@
     <p>Please log in to access your account.</p>
   </div>
   <div class="container">
-    <ion-item class="ion-padding">
+    <div style="margin: 2rem">
       <ion-label position="stacked">Phone Number</ion-label>
       <ion-input shape="rectangle" class="login-page-input" type="tel"></ion-input>
       <ion-label position="stacked">PIN</ion-label>
       <ion-input shape="rectangle" class="login-page-input" type="password"></ion-input>
-    </ion-item>
+    </div>
     <div style="margin-left: 2rem; margin-right: 2rem;">
       <ion-button color="warning" class="login-page-button" expand="block">Login</ion-button>
       <ion-label style="float: right;">Forgot your PIN?</ion-label>
     </div>
     <div style="margin-top: 3rem; margin: 2rem;">
-      <ion-label>New Customer</ion-label>
+      <ion-label>New Customer?</ion-label>
       <ion-button color="warning" class="login-page-button" expand="block">Create an Account</ion-button>
     </div>
   </div>
