--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -10,15 +10,14 @@ ion-content {
 		transform: translate(-50%, -50%);
 		padding: 5px;
 	}
-    .container{
     ion-label{
         color: rgba(24, 46, 66, 0.897);
         font-weight: bolder;
-        font-size: 12px;
+        font-size: 13px;
     }
 }
 .login-header{
-    padding-top: 20%;
+    padding-top: 15%;
     padding-left: 2rem;
     h2{
         color: rgba(33, 59, 83, 0.897);
@@ -33,14 +32,15 @@ ion-input{
     border: solid 1px rgba(27, 30, 44, 0.801);
   }
   ion-button{
-      font-weight: lighter;
+      font-weight:lighter;
       color: white;
       text-transform: uppercase;
       height: 40px;
       
   }
 .login-page-input{
-    border-radius: 6px;
+    border-radius: 9px;
+    margin-bottom: 0.3rem;
   }
   @media (max-width: 768px) {
     .login-header{
@@ -48,7 +48,13 @@ ion-input{
         padding-left: 2rem;
     }
 }
- 
+@media (max-width: 991px) {
+    .login-header{
+        padding-top: 50%;
+        padding-left: 2rem;
+    }
 }
+ 
+
 
   
