--- a/src/app/pages/splash/splash.page.html
+++ b/src/app/pages/splash/splash.page.html
@@ -1,8 +1,8 @@
 <ion-content fullscreen>
   <div id="topToBottom">
-      <img class="sw-img"  src="/assets/icons/icon.png" alt="dalex-swift" />
+      <img class="sp-img"  src="/assets/icons/icon.png" alt="dalex-swift" />
   </div>
   <div id="bottomToTop">
-    <img class="sw-imgs" src="/assets/icons/icon.png" alt="dalex-swift" />
+    <img class="sw-imgs" src="/assets/icons/dalex.png" alt="dalex-swift" />
 </div>
 </ion-content>
