--- a/src/app/pages/tell-a-friend/tell-a-friend.page.html
+++ b/src/app/pages/tell-a-friend/tell-a-friend.page.html
@@ -3,12 +3,10 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title align-title="center">Dashboard</ion-title>
+    <ion-title align-title="center">Tell A Friend</ion-title>
       <img slot="end"  class="sw-img" src="/assets/icons/icon.png" alt="dalex-swift" />
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <div>
-    <p style="text-align: center;">Hello {{name}}</p>
-  </div>
+  
 </ion-content>
