--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,12 +10,12 @@
   --ion-color-primary-shade: #024861;
   --ion-color-primary-tint: #1b637d;
 
-  --ion-color-secondary: #006f95;
+  --ion-color-secondary: #F37135;
   --ion-color-secondary-rgb: 0,111,149;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255,255,255;
-  --ion-color-secondary-shade: #006283;
-  --ion-color-secondary-tint: #1a7da0;
+  --ion-color-secondary-shade: #a03504;
+  --ion-color-secondary-tint:#F37135;
 
   --ion-color-tertiary: #7044ff;
   --ion-color-tertiary-rgb: 112,68,255;
