--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -3,10 +3,10 @@
     <img class="sp-img" src="/assets/icons/icon.png" alt="dalex-swift" />
   </div>
   <div class="login-header">
-    <h2>Login</h2>
+    <h1>Login</h1>
     <p>Please log in to access your account.</p>
   </div>
-  <div class="container">
+  <div>
     <div style="margin: 2rem">
       <ion-label position="stacked">Phone Number</ion-label>
       <ion-input shape="rectangle" class="login-page-input" type="tel"></ion-input>
