--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -13,13 +13,14 @@ ion-content {
     ion-label{
         color: #0A3A50;
         font-weight: bolder;
-        font-size: 13px;
+        font-size: 11px;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 }
 .login-header{
     padding-top: 15%;
     padding-left: 2rem;
-    h2{
+    h1{
         color: #0A3A50;
         font-weight: bolder;
     }
