--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -4,11 +4,98 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title align-title="center">Dashboard</ion-title>
-      <img slot="end"  class="sw-img" src="/assets/icons/icon.png" alt="dalex-swift" />
+    <img slot="end" class="sw-img" src="/assets/icons/icon.png" alt="dalex-swift" />
   </ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content fullscreen>
   <div>
-    <p style="text-align: center;">Hello {{name}}</p>
+    <h5 style="text-align: center; font-weight: bold;" class="mt-2">Hello {{name}}</h5>
   </div>
+  <ion-card>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/assets/banner/banner1.png" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="/assets/banner/banner2.png" alt="Second slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev controls" href="#carouselExampleControls" role="button" data-slide="prev">
+        <ion-icon name="chevron-back-circle"></ion-icon>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <ion-icon name="chevron-forward-circle"></ion-icon>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </ion-card>
+  <h2>Account Summary</h2>
+  <ion-grid class="db-sum">
+    <ion-row>
+      <ion-col size="6">
+        <ion-card class="db-card">
+          <ion-card-content>
+            Investment Date
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card class="db-card">
+          <ion-card-content>
+            Maturity Date
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6">
+        <ion-card class="db-card">
+          <ion-card-content>
+            Total Deposit
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card class="db-card">
+          <ion-card-content>
+           Total Interest
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6">
+        <ion-card class="db-card">
+          <ion-card-content>
+            Balance
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card class="db-card">
+          <ion-card-content>
+            Redeemable
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <h2>Goals</h2>
+  <ion-card>
+    <ion-card-content>
+      <ion-row>
+        <ion-col size="2">
+          <div class="goal text-center">
+            <ion-icon name="trophy" size="small"></ion-icon>
+          </div>
+        </ion-col>
+        <ion-col size="10" class="text-left">
+          <h6 position="stacked">Goal</h6>
+          <p position="stacked">Duration</p>
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
