style: contact us

--- a/src/app/pages/contact/contact.page.html
+++ b/src/app/pages/contact/contact.page.html
@@ -8,5 +8,95 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  
+  <ion-button color="secondary" class="mt-5" style="margin: 1rem;" expand="block">
+  Our Contact Details   
+  </ion-button>
+  <ion-card>
+    <!-- <ion-card-content> -->
+      <ion-row>
+        <ion-col size="2">
+          <div class="goal text-center">
+            <ion-icon name="call" size="large"></ion-icon>
+          </div>
+        </ion-col>
+        <ion-col size="10" class="text-left">
+          <h6>721 or 0242435659</h6>
+        </ion-col>
+      </ion-row>
+    <!-- </ion-card-content> -->
+  </ion-card>
+  <ion-card>
+    <!-- <ion-card-content> -->
+      <ion-row>
+        <ion-col size="2">
+          <div class="goal text-center">
+            <ion-icon name="logo-whatsapp" size="large"></ion-icon>
+          </div>
+        </ion-col>
+        <ion-col size="10" class="text-left">
+          <h6>0559718811</h6>
+        </ion-col>
+      </ion-row>
+    <!-- </ion-card-content> -->
+  </ion-card>
+  <ion-card>
+    <!-- <ion-card-content> -->
+      <ion-row>
+        <ion-col size="2">
+          <div class="goal text-center">
+            <ion-icon name="mail-open" size="large"></ion-icon>
+          </div>
+        </ion-col>
+        <ion-col size="10" class="text-left">
+          <div>
+            <h6 >dalexswift@dalexfinance.com <br>
+              customercare@dalexfinance.com
+            </h6>
+          </div>
+        </ion-col>
+      </ion-row>
+    <!-- </ion-card-content> -->
+  </ion-card>
+  <ion-card>
+    <!-- <ion-card-content> -->
+      <ion-row>
+        <ion-col size="2">
+          <div class="goal text-center">
+            <ion-icon name="logo-twitter" size="large"></ion-icon>
+          </div>
+        </ion-col>
+        <ion-col size="10" class="text-left">
+          <h6>DalexSWIFT</h6>
+        </ion-col>
+      </ion-row>
+    <!-- </ion-card-content> -->
+  </ion-card>
+  <ion-card>
+    <!-- <ion-card-content> -->
+      <ion-row>
+        <ion-col size="2">
+          <div class="goal text-center">
+            <ion-icon name="logo-facebook" size="large"></ion-icon>
+          </div>
+        </ion-col>
+        <ion-col size="10" class="text-left">
+          <h6>DalexSWIFT</h6>
+        </ion-col>
+      </ion-row>
+    <!-- </ion-card-content> -->
+  </ion-card>
+  <ion-card>
+    <!-- <ion-card-content> -->
+      <ion-row>
+        <ion-col size="2">
+          <div class="goal text-center">
+            <ion-icon name="logo-instagram" size="large"></ion-icon>
+          </div>
+        </ion-col>
+        <ion-col size="10" class="text-left">
+          <h6>dalexswift</h6>
+        </ion-col>
+      </ion-row>
+    <!-- </ion-card-content> -->
+  </ion-card>
 </ion-content>
