style: redemption page

--- a/src/app/pages/redeem/redeem.page.html
+++ b/src/app/pages/redeem/redeem.page.html
@@ -4,9 +4,20 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title align-title="center">Redeem</ion-title>
-      <img slot="end"  class="sw-img" src="/assets/icons/icon.png" alt="dalex-swift" />
+    <img slot="end" class="sw-img" src="/assets/icons/icon.png" alt="dalex-swift" />
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  
+  <ion-card>
+    <ion-card-content>
+      <div style="text-align: center;">
+        <p class="funds">Fund Redemption</p>
+        <hr />
+        <p class="mb-4 redeem">Redeem my Investment Funds!</p>
+      </div>
+      <ion-label position="stacked">SWIFT Account</ion-label>
+      <ion-input shape="rectangle" class="login-page-input" type="number"></ion-input>
+      <ion-button color="secondary" class="login-page-button mt-3" expand="block">Request</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
