feat: redemption camera access

--- a/src/app/pages/redeem/redeem.page.html
+++ b/src/app/pages/redeem/redeem.page.html
@@ -17,7 +17,7 @@
       </div>
       <ion-label position="stacked">SWIFT Account</ion-label>
       <ion-input shape="rectangle" class="login-page-input" type="number"></ion-input>
-      <ion-button color="secondary" class="login-page-button mt-3" expand="block">Request</ion-button>
+      <ion-button color="secondary" class="login-page-button mt-3" expand="block" (click)="addNewToGallery()">Request</ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
