--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-content class="sw-view" fullscreen>
   <div>
-    <img class="sp-img" src="/assets/icons/icon.png" alt="dalex-swift" />
+    <img class="sp-img" src="/assets/icons/bus.png" alt="yenkor" />
   </div>
   <div class="login-header">
     <h1>Login</h1>
@@ -14,12 +14,12 @@
       <ion-input shape="rectangle" class="login-page-input" type="password"></ion-input>
     </div>
     <div style="margin-left: 2rem; margin-right: 2rem;">
-      <ion-button color="secondary" class="login-page-button" expand="block" routerLink="/dashboard">Login</ion-button>
-      <ion-label style="float: right;">Forgot your PIN?</ion-label>
+      <ion-button color="success" class="login-page-button" expand="block" routerLink="/dashboard">Login</ion-button>
+      <!-- <ion-label style="float: right;">Forgot your PIN?</ion-label> -->
     </div>
     <div style="margin-top: 3rem; margin: 2rem;">
       <ion-label>New Customer?</ion-label>
-      <ion-button color="secondary" class="login-page-button" expand="block">Create an Account</ion-button>
+      <ion-button color="success" class="login-page-button" expand="block" routerLink="/signup">Sign Up</ion-button>
     </div>
   </div>
 </ion-content>
