--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,11 +10,11 @@
   --ion-color-primary-shade: #024861;
   --ion-color-primary-tint: #1b637d;
 
-  --ion-color-secondary: #F37135;
+  --ion-color-secondary: #f3c735;
   --ion-color-secondary-rgb: 0,111,149;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255,255,255;
-  --ion-color-secondary-shade: #a03504;
+  --ion-color-secondary-shade: #c08b47;
   --ion-color-secondary-tint:#F37135;
 
   --ion-color-tertiary: #7044ff;
@@ -61,7 +61,7 @@
 
   --ion-color-light: #f4f5f8;
   --ion-color-light-rgb: 244,244,244;
-  --ion-color-light-contrast: #000000;
+  --ion-color-light-contrast: #02526e;
   --ion-color-light-contrast-rgb: 0,0,0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
