--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -1,13 +1,18 @@
 <ion-header>
   <ion-toolbar color="primary" style="padding-right: 1.5rem;">
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
+     <ion-buttons slot="start">
+  <ion-menu-button></ion-menu-button>
+</ion-buttons>
     <ion-title align-title="center">Dashboard</ion-title>
-    <img slot="end" class="sw-img" src="/assets/icons/icon.png" alt="dalex-swift" />
+    <!-- <img slot="end" class="sw-img" src="/assets/icons/bus.png" alt="dalex-swift" /> -->
   </ion-toolbar>
 </ion-header>
-<ion-content fullscreen>
+ 
+
+<ion-content fullscreen padding>
+  <!-- <div #map id="map"></div> -->
+  <!-- <img  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn30gHlzPINlfeZpaq2C6r4HCPvrwVbrs"/> -->
+  <!-- <google-map apiKey="AIzaSyBn30gHlzPINlfeZpaq2C6r4HCPvrwVbrs"></google-map> -->
   <div>
     <h5 style="text-align: center; font-weight: bold;" class="mt-2">Hello {{name}}</h5>
   </div>
@@ -15,20 +20,20 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/assets/banner/banner1.png" alt="First slide">
+          <img src="/assets/banner/banner2.png" alt="First slide" >
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="/assets/banner/banner2.png" alt="Second slide">
-        </div>
+        <!-- <div class="carousel-item">
+          <img class="d-block w-100" src="/assets/banner/banner1.jpeg" alt="Second slide" style="height: 11.3rem;">
+        </div> -->
       </div>
-      <a class="carousel-control-prev controls" href="#carouselExampleControls" role="button" data-slide="prev">
+      <!-- <a class="carousel-control-prev controls" href="#carouselExampleControls" role="button" data-slide="prev">
         <ion-icon name="chevron-back-circle"></ion-icon>
         <span class="sr-only">Previous</span>
       </a>
       <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
         <ion-icon name="chevron-forward-circle"></ion-icon>
         <span class="sr-only">Next</span>
-      </a>
+      </a> -->
     </div>
   </ion-card>
   <h2>Account Summary</h2>
@@ -37,65 +42,51 @@
       <ion-col size="6">
         <ion-card class="db-card">
           <ion-card-content>
-            Investment Date
+            ToTal Trips
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col size="6">
-        <ion-card class="db-card">
-          <ion-card-content>
-            Maturity Date
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size="6">
-        <ion-card class="db-card">
-          <ion-card-content>
-            Total Deposit
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-      <ion-col size="6">
-        <ion-card class="db-card">
-          <ion-card-content>
-           Total Interest
+        <ion-card class="db-card" color="primary" routerLink="/booking">
+          <ion-card-content style="color: white;">
+            Book a Trip
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
+    
     <ion-row>
       <ion-col size="6">
-        <ion-card class="db-card">
+        <ion-card class="db-card" >
           <ion-card-content>
             Balance
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col size="6">
-        <ion-card class="db-card">
+        <ion-card class="db-card" disabled="true">
           <ion-card-content>
-            Redeemable
+            Promo
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <h2>Goals</h2>
+  <h2>Booked Trip</h2>
   <ion-card>
-    <ion-card-content>
-      <ion-row>
-        <ion-col size="2">
-          <div class="goal text-center">
-            <ion-icon name="trophy" size="small"></ion-icon>
-          </div>
-        </ion-col>
-        <ion-col size="10" class="text-left">
-          <h6 position="stacked">Goal</h6>
-          <p position="stacked">Duration</p>
-        </ion-col>
-      </ion-row>
-    </ion-card-content>
+    <ion-item mode="md">
+      <ion-thumbnail slot="start" class="goal text-center">
+        <ion-icon name="bus" size="meduim" mode="ios"></ion-icon>
+      </ion-thumbnail>
+      <ion-label>
+        <h6 position="stacked">Description</h6>
+        <p position="stacked">Duration</p>
+      </ion-label>
+    </ion-item>
+    <div class="container">
+      <ion-progress-bar color="secondary" value="0.5"></ion-progress-bar>
+      <p slot="start" style="display: inline-block; float: left;">1day</p>
+      <p style="display: inline-block;float: right;">3days</p>
+    </div>
   </ion-card>
 </ion-content>
