--- a/src/app/pages/deposit/deposit.page.html
+++ b/src/app/pages/deposit/deposit.page.html
@@ -3,10 +3,131 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title align-title="center">Deposit</ion-title>
-      <img  slot="end"  class="sw-img" src="/assets/icons/icon.png" alt="dalex-swift" />
+    <ion-title align-title="center">Booking</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content>
-  
+<ion-content fullscreen>
+  <ion-card color="light">
+    <div *ngIf="!oneway">
+      <ion-card-header >
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <ion-button expand="full" >Roundtrip</ion-button>
+            </ion-col>
+            <ion-col size="6">
+              <ion-button expand="full" color="light" (click)="bookOneway()">Oneway</ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-card-header>
+      <ion-card-content color="light" >
+        <ion-card class="inner">
+          <ion-list>
+            <ion-item>
+              <ion-searchbar search-icon="location"  placeholder="From"></ion-searchbar>
+            </ion-item>
+            <ion-item lines="none">
+        <ion-searchbar  search-icon="location" placeholder="To"></ion-searchbar>
+            </ion-item>
+          </ion-list>
+        
+        </ion-card>
+        <ion-card class="inner">
+          <ion-list>
+            <ion-item>
+              <ion-datetime placeholder="Departure"  display-timezone="utc"></ion-datetime>
+            </ion-item>
+            <ion-item lines="none">
+              <ion-datetime placeholder="Return"  display-timezone="utc"></ion-datetime>
+            </ion-item>
+          </ion-list>
+        </ion-card>
+        <ion-button color="primary" expand="block">Search</ion-button>
+      </ion-card-content>
+    </div>
+    <div *ngIf="oneway">
+      <ion-card-header >
+        <ion-grid>
+          <ion-row>
+            <ion-col size="6">
+              <ion-button expand="full" color="light" (click)="bookOneway()">Roundtrip</ion-button>
+            </ion-col>
+            <ion-col size="6">
+              <ion-button expand="full"   >Oneway</ion-button>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+      </ion-card-header>
+      <ion-card-content color="light" >
+      <ion-card class="inner">
+        <ion-list>
+          <ion-item>
+            <ion-searchbar search-icon="location"  placeholder="From"></ion-searchbar>
+          </ion-item>
+          <ion-item lines="none">
+      <ion-searchbar  search-icon="location" placeholder="To"></ion-searchbar>
+          </ion-item>
+        </ion-list>
+      </ion-card>
+      <ion-card class="inner">
+        <ion-list>
+          <ion-item lines="none">
+            <ion-datetime placeholder="Departure"  display-timezone="utc"></ion-datetime>
+          </ion-item>
+        </ion-list>
+      </ion-card>
+      <ion-button color="primary" expand="block">Search</ion-button>
+    </ion-card-content>
+    </div>
+    
+  </ion-card>
+  <!-- <ion-card>
+    <ion-card-content>Ashanti</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Brong-Ahafo</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Central</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Eastern</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Greater Accra</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Northern</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Upper East</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Upper West</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Volta</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Western</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Oti</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Savannah</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Bono East</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Ahafo</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Volta</ion-card-content>
+  </ion-card>
+  <ion-card>
+    <ion-card-content>Western North</ion-card-content>
+  </ion-card> -->
 </ion-content>
