--- a/src/app/pages/history/history.page.html
+++ b/src/app/pages/history/history.page.html
@@ -1,12 +1,15 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar color="primary" style="padding-right: 1.5rem;">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title align-title="center">History</ion-title>
-      <img slot="end"  class="sw-img" src="/assets/icons/icon.png" alt="dalex-swift" />
+    <ion-title align-title="center">Trips</ion-title>
+      <img slot="end"  class="sw-img" src="/assets/icons/bus.png" alt="dalex-swift" />
   </ion-toolbar>
-</ion-header>
-<ion-content>
+</ion-header> -->
+<ion-buttons slot="start" class="header-menu">
+  <ion-menu-button></ion-menu-button>
+</ion-buttons>
+<ion-content fullscreen>
   
 </ion-content>
