--- a/src/app/pages/tell-a-friend/tell-a-friend.page.html
+++ b/src/app/pages/tell-a-friend/tell-a-friend.page.html
@@ -3,10 +3,9 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title align-title="center">Tell A Friend</ion-title>
-      <img slot="end"  class="sw-img" src="/assets/icons/icon.png" alt="dalex-swift" />
+    <ion-title align-title="center">Track Your Trip</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content>
-  
+<ion-content fullscreen>
+  <p class="text-center">No Trip</p>
 </ion-content>
