build:php server

--- a/src/app/pages/loan/loan.page.html
+++ b/src/app/pages/loan/loan.page.html
@@ -1,15 +1,11 @@
-<!-- <ion-header>
+<ion-header>
   <ion-toolbar color="primary" style="padding-right: 1.5rem;">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title align-title="center">Messages</ion-title>
-      <img slot="end"  class="sw-img" src="/assets/icons/bus.png" alt="dalex-swift" />
+    <ion-title align-title="center">Notifications</ion-title>
   </ion-toolbar>
-</ion-header> -->
-<ion-buttons slot="start" class="header-menu">
-  <ion-menu-button></ion-menu-button>
-</ion-buttons>
+</ion-header>
 <ion-content fullscreen>
   
 </ion-content>
