--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,43 +1,42 @@
-ion-label{
-text-transform: uppercase;
-}
-
-ion-item{
-    font-size: small;
-}
-ion-split-pane{ 
-    --border: none !important;
-    ion-menu{
-     --background: var(--ion-color-light) !important; 
-        ion-content{            
-            --background: var(--ion-color-light) !important; 
-            
-            ion-item{
-                --background: var(--ion-color-light) !important;
-                 --color: #000000 !important;
-                //  ion-icon{ padding-right: 10px !important; }
-            }
-        }
-    }
-}
-ion-tab-bar{
-    border-top: transparent;
-    border-radius: 25px 25px 0px 0px;
-}
 ion-tabs{
-    background-color: rgba(238, 238, 238, 0.973);
+	ion-fab {
+		margin-bottom: env(safe-area-inset-bottom); /* fix notch ios*/
+		ion-fab-button {
+			--box-shadow: none;
+		}
+	}
+	ion-tab-bar {
+		--border: 0;
+		--background: transparent;
+		position: absolute;
+		bottom: 0;
+		left:0; right: 0;
+		width: 100%;
+		&:after{
+			content: " ";
+			width: 100%;
+			bottom: 0;
+			background: var(--ion-color-light);
+			height: env(safe-area-inset-bottom);
+			position: absolute;
+		}
+		ion-tab-button {
+			--background: var(--ion-color-light);
+		}
+		ion-tab-button.comments {
+			margin-right: 0px;
+			border-top-right-radius: 18px;
+		}
+		ion-tab-button.notifs {
+			margin-left: 0px;
+			border-top-left-radius: 18px;
+		}
+		svg {    
+			width: 72px;
+			margin-top: 19px;
+			path{
+				fill:  var(--ion-color-light);
+			}		
+		}
+	}
 }
-ion-content {
-	--background: rgba(238, 238, 238, 0.973);
-}
-// .list-nav{
-//     margin-top: 3rem;
-// }
-@media (max-width: 768px) {
-// .menu-nav{
-//     margin-top: 3rem;
-// }
-.list-nav{
-    margin-top: 0;
-}
-} 
