--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,16 +7,20 @@
     <p>Please log in to access your account.</p>
   </div>
   <div>
-    <div style="margin: 2rem">
-      <ion-label position="stacked">Phone Number</ion-label>
-      <ion-input shape="rectangle" class="login-page-input" type="tel"></ion-input>
-      <ion-label position="stacked">PIN</ion-label>
-      <ion-input shape="rectangle" class="login-page-input" type="password"></ion-input>
-    </div>
-    <div style="margin-left: 2rem; margin-right: 2rem;">
-      <ion-button color="success" class="login-page-button" expand="block" routerLink="/dashboard">Login</ion-button>
-      <!-- <ion-label style="float: right;">Forgot your PIN?</ion-label> -->
-    </div>
+    <form action="login.php" [formGroup]="form" (submit)="submit($event)">
+      <div style="margin: 2rem">
+        <ion-label position="stacked">Phone Number</ion-label>
+        <ion-input shape="rectangle" class="login-page-input" name="phoneNumber" formControlName="phoneNumber"
+          type="tel"></ion-input>
+        <ion-label position="stacked">PIN</ion-label>
+        <ion-input shape="rectangle" class="login-page-input" name="pin" formControlName="pin" type="password">
+        </ion-input>
+      </div>
+      <div style="margin-left: 2rem; margin-right: 2rem;">
+        <ion-button color="success" class="login-page-button" expand="block" type="submit">Login</ion-button>
+        <ion-label style="float: right;">Forgot your PIN?</ion-label>
+      </div>
+    </form>
     <div style="margin-top: 3rem; margin: 2rem;">
       <ion-label>New Customer?</ion-label>
       <ion-button color="success" class="login-page-button" expand="block" routerLink="/signup">Sign Up</ion-button>
