--- a/src/app/pages/deposit/deposit.page.scss
+++ b/src/app/pages/deposit/deposit.page.scss
@@ -16,3 +16,17 @@ padding: 5px 0px 0px 5px !important;
 .inner{
     margin: 0px 0px 10px 0px !important;
 }
+.btn{
+    border-radius: 25px;
+}
+.grad {
+    height: 200px;
+    background-size:contain;
+    // border-bottom-right-radius: 45px;
+    // border-bottom-left-radius: 45px;
+    background-image: linear-gradient( 180deg,rgba(15, 15, 15, 0),rgba(240, 240, 240, 0.815)),url("/assets/banner/booking.jpeg");
+    background-repeat: no-repeat;
+  }
+  .main{
+      transform: translate(0%,-20%);
+  }
