--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -37,7 +37,7 @@ ion-input{
       color: white;
       text-transform: uppercase;
       height: 40px;
-      
+
   }
 .login-page-input{
     border-radius: 9px;
@@ -55,7 +55,35 @@ ion-input{
         padding-left: 2rem;
     }
 }
- 
+hr {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  border: 0;
+  width: 70px;
+  border-top: 1px solid #1F6B8E;
+}
+.funds{
+  color: #1F6B8E;
+  font-weight: bold;
+  text-transform: uppercase;
+
+}
+ion-card{
+  margin-top: 25%;
+}
+@media (max-width: 768px) {
+  ion-card{
+    margin-top: 55%;
+  }
+}
+h5{
+  color: #0A3A50;
+  font-weight: bolder;
+  font-size: 11px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-align: center;
+}
 
 
-  
+
+
