--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,7 +3,7 @@
 
 /** Ionic CSS Variables **/
 :root {
-  --ion-color-primary: #02526e;
+  --ion-color-primary: #003366;
   --ion-color-primary-rgb: 2,82,110;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255,255,255;
