--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -3,20 +3,20 @@
      <ion-buttons slot="start">
   <ion-menu-button></ion-menu-button>
 </ion-buttons>
-    <ion-title align-title="center">Dashboard</ion-title>
+    <ion-title style="text-align:center;">Dashboard</ion-title>
     <!-- <img slot="end" class="sw-img" src="/assets/icons/bus.png" alt="dalex-swift" /> -->
   </ion-toolbar>
 </ion-header>
- 
+
 
 <ion-content fullscreen padding>
   <!-- <div #map id="map"></div> -->
   <!-- <img  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBn30gHlzPINlfeZpaq2C6r4HCPvrwVbrs"/> -->
   <!-- <google-map apiKey="AIzaSyBn30gHlzPINlfeZpaq2C6r4HCPvrwVbrs"></google-map> -->
   <div>
-    <h5 style="text-align: center; font-weight: bold;" class="mt-2">Hello {{name}}</h5>
+    <h5 style="text-align: center; font-weight: bold;" class="mt-2">Hello {{user}}</h5>
   </div>
-  <ion-card>
+  <ion-card  mode="ios">
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -40,31 +40,31 @@
   <ion-grid class="db-sum">
     <ion-row>
       <ion-col size="6">
-        <ion-card class="db-card">
+        <ion-card  mode="ios" class="db-card">
           <ion-card-content>
             ToTal Trips
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col size="6">
-        <ion-card class="db-card" color="primary" routerLink="/booking">
+        <ion-card  mode="ios" class="db-card" color="primary" routerLink="/booking">
           <ion-card-content style="color: white;">
             Book a Trip
           </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
-    
+
     <ion-row>
       <ion-col size="6">
-        <ion-card class="db-card" >
+        <ion-card  mode="ios" class="db-card" >
           <ion-card-content>
             Balance
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col size="6">
-        <ion-card class="db-card" disabled="true">
+        <ion-card  mode="ios" class="db-card" disabled="true">
           <ion-card-content>
             Promo
           </ion-card-content>
@@ -73,7 +73,7 @@
     </ion-row>
   </ion-grid>
   <h2>Booked Trip</h2>
-  <ion-card>
+  <ion-card  mode="ios">
     <ion-item mode="md">
       <ion-thumbnail slot="start" class="goal text-center">
         <ion-icon name="bus" size="meduim" mode="ios"></ion-icon>
