--- a/src/app/pages/dashboard/dashboard.page.scss
+++ b/src/app/pages/dashboard/dashboard.page.scss
@@ -1,6 +1,6 @@
 ion-icon{
     font-size: 25px;
-    color:#f3a735;
+    color:#0ec254;
 }
 ion-item {
     font-size: small;
@@ -23,21 +23,21 @@ ion-item {
 h2{
     text-transform: uppercase;
     font-size: small;
-    font-weight: bold; 
+    font-weight: bold;
     padding-left: 1rem;
 }
 h6{
     color:  #02526e;
     font-size: small;
-    font-weight: bold; 
+    font-weight: bold;
 }
 p{
     color:  #02526e;
     font-size: x-small;
-    font-weight: bold;  
+    font-weight: bold;
 }
 .goal{
-    color: #F37135;
+    color: #0ec254;
     width: 5vh;
     height: 5vh;
     border-radius: 5px;
