--- a/src/app/pages/deposit/deposit.page.scss
+++ b/src/app/pages/deposit/deposit.page.scss
@@ -4,6 +4,14 @@ ion-searchbar{
     margin: 0px !important;
     padding: 0px !important
 }
+hr {
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  border: 0;
+  width: 70px;
+  border-top: 1px solid #0ec254;
+}
+
 
 ion-list{
     margin: 0px !important;
@@ -13,7 +21,10 @@ ion-card-header{
 margin: 0px !important;
 padding: 5px 0px 0px 5px !important;
 }
+.button-color{
 
+  border-bottom: #0ec254 2px solid;
+}
 //.inner{
 //    margin: 0px 0px 10px 0px !important;
 //}
