--- a/src/app/pages/loan/loan.page.html
+++ b/src/app/pages/loan/loan.page.html
@@ -7,5 +7,10 @@
   </ion-toolbar>
 </ion-header>
 <ion-content fullscreen>
-  
+  <div *ngFor="let i of results"class="container">
+    <ion-card class="container">
+      <h3>{{i.messageTitle}}</h3>
+      <div>{{i.messageContent}}</div>
+    </ion-card>
+  </div>
 </ion-content>
